# sc_verifier_server

./: .gitignore  ANALYSIS_GUIDE.md  README.md  action_types.py  agent.py  analysis.py  handler.py  main.py  pyproject.toml  rl_advanced_analysis.py  rl_analysis.py  rl_difficulty_analysis.py  temp.py  test_parallel.py  test_serial.py
contracts/: code.hex
contracts/src/answers/: ActualBehavior.sol  AddressAttacker.sol  AddressCalculator.sol  AddressChecker.sol  AddressFinder.sol  AddressFinder2.sol  AddressFinder3.sol  AddressFinder4.sol  AddressFinder5.sol  AdvancedExploit.sol  AdvancedImpersonator.sol  AlertDetectionBot.sol  AlienAttack.sol  AlienAttacker.sol  AlienAttacker2.sol  AlienCodex.sol  AlienCodexAttack.sol  AlienCodexAttacker.sol  AlienCodexCorrectAttack.sol  AlienCodexExploit.sol  AlienCodexFix.sol  AlienExploit.sol  AnotherPayableAttacker.sol  Answer.sol  AnswerContract.sol  ApprovalExecutor.sol  ApprovalHelper.sol  ApproveHelper.sol  ApproveTransferFrom.sol  ArrayBugTester.sol  AssemblySolver.sol  Attack Bot.sol  Attack.sol  Attack1.sol  Attack2.sol  Attack3.sol  Attack4.sol  AttackAlienCodex.sol  AttackAssembly.sol  AttackBot.sol  (+685 more)
dataset/paradigm-ctf-2023/: generate_paradigm_gamedata.py  paradigm_2023_gamedata.json
dataset/paradigm-ctf-2023/hello-world/challenge/project/src/: Attacker_0.sol
