[project]
name = "sc-verifier-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.14",
    "matplotlib>=3.10.3",
    "openai>=1.93.0",
    "pandas>=2.3.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "wandb>=0.21.0",
    "weave>=0.51.54",
]
